<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_library"
        android:title="@string/main"
        >
        <menu>
            <item
                android:id="@+id/music_library"
                android:icon="@drawable/library_music"
                android:title="@string/music_library"
                android:checkable="true"/>
            <item
                android:id="@+id/folders_hierarchy"
                android:icon="@drawable/smartphone"
                android:title="@string/folders_hierarchy"
                android:checkable="true"/>
            <item
                android:id="@+id/playlists"
                android:icon="@drawable/playlist_play"
                android:title="@string/playlists"
                android:checkable="true"/>
            <item
                android:id="@+id/streams"
                android:icon="@drawable/stream"
                android:title="@string/streams"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/main_others"
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                android:checkable="true"/>
        </menu>
    </item>
</menu>