<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/main_margin"
            android:gravity="center_vertical"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/table_view"
                app:srcCompat="@drawable/table_view"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_organize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:text="@string/organize"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/main_small_margin"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/main_margin"
            android:orientation="vertical"
            >
            <RadioGroup
                android:id="@+id/radio_group_organize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/organize_divider"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_dialog_small_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_small_list"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_file_dialog_medium_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_medium_list"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_dialog_large_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_large_list"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_dialog_small_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_small_grid"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_file_dialog_medium_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_medium_grid"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_dialog_large_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_large_grid"
                        app:useMaterialThemeColors="true"
                        style="@style/Widget.Material3.CompoundButton.RadioButton" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>